[project]
name = "tools"
version = "0.1.0"
description = ""
authors = [
    {name = "julyfinal", email = "julyfinal@outlook.com"},
]
dependencies = [
    "requests>=2.31.0",
    "bs4>=0.0.1",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.23",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
