[project]
name = "tools"
version = "0.1.0"
description = ""
authors = [
    {name = "julyfinal", email = "julyfinal@outlook.com"},
]
dependencies = [
    "requests>=2.31.0",
    "bs4>=0.0.1",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.23",
    "pandas>=2.1.3",
    "rich>=13.7.0",
    "lxml>=4.9.3",
    "pyarrow>=15.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]
av = "python NSFW/av_tools.py"